fix(responsive): projects responsive overflow and header

--- a/assets/src/css/components/header.scss
+++ b/assets/src/css/components/header.scss
@@ -66,7 +66,7 @@ header {
 			position: absolute;
 			height: 3px;
 			width: 15px;
-			background: var(--primary-color);
+			background: var(--secondary-color);
 			border-radius: var(--border-radius);
 			opacity: 1;
 			left: 0;
